internet_gateway.tf
resource "aws_internet_gateway" "eks_igw" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    local.tags,
    {
      Name = "${var.prefix}-igw"
    }
  )
}

resource "aws_route_table" "eks_public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.eks_igw.id
  }

  tags = merge(
    local.tags,
    {
      Name = "${var.prefix}-public-route-table"
    }
  )
}
